--- a/test_two.html
+++ b/test_two.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"  href="./style.css" />
 </head>
 <body>
-    <label for = "user_id">아이디 : </label>
-    <input type ="text" name = "userid" placeholder = "아이디를 입력하세요" />
+    <label id = "label_id" for = "user_id">아이디 : </label>
+    <input class = "userid" type ="text" name = "userid" placeholder = "아이디를 입력하세요" />
     <br />
     <label for ="user_password">비밀번호 : </label>
     <input type = "password" name = "userpw" placeholder = "비밀번호를 입력하세요" />
@@ -22,8 +23,10 @@
     <label for = "hint">힌트는??? : </label>
     <input type = "text" name = "hint" placeholder = "비밀번호 힌트의 답은?" />
     <br />
-    <label for = "user_self">자기소개 : </label>
-    <textarea name = "content" cols = "50" rows="20">자기소개 부탁드립니다. </textarea>
+    <img src="./dog.jpg" alt="강아지" />
+    <br />
+    <label id="label_1" for = "user_self">자기소개 : </label>
+    <textarea class = "con" name = "content" cols = "50" rows="20">자기소개 부탁드립니다. </textarea>
     <br />
     <button  type = "submit">확인</button>
     >
